grapql schema stiching part6

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,7 +4,7 @@
    "host": "localhost",
    "port": 5432,
    "username": "andrei",
-   "password": "",
+   "password": "oong3ied",
    "database": "graphql-ts-server-boilerplate",
    "synchronize": true,
    "logging": true,
@@ -29,7 +29,7 @@
   "host": "localhost",
   "port": 5432,
   "username": "andrei",
-  "password": "",
+  "password": "oong3ied",
   "database": "graphql-ts-server-boilerplate-test",
   "synchronize": true,
   "logging": false,
