--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.1",
+    "@types/ioredis": "^4.0.3",
     "@types/jest": "^23.3.1",
     "@types/node": "^8.0.29",
     "@types/uuid": "^3.4.3",
@@ -22,9 +23,12 @@
     "graphql-request": "^1.8.2",
     "graphql-tools": "^3.1.1",
     "graphql-yoga": "^1.16.1",
+    "ioredis": "^4.2.0",
     "pg": "^7.3.0",
     "reflect-metadata": "^0.1.10",
+    "tslint": "^5.11.0",
     "typeorm": "0.2.7",
+    "uuid": "^3.3.2",
     "yup": "^0.26.2"
   },
   "scripts": {
