--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.1",
+    "@types/express": "^4.16.0",
     "@types/ioredis": "^4.0.3",
     "@types/jest": "^23.3.1",
     "@types/node": "^8.0.29",
+    "@types/node-fetch": "^2.1.2",
     "@types/uuid": "^3.4.3",
     "@types/yup": "^0.24.9",
     "gql2ts": "^1.8.2",
@@ -18,12 +20,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "express": "^4.16.4",
     "graphql": "^0.13.2",
     "graphql-import": "^0.6.0",
     "graphql-request": "^1.8.2",
     "graphql-tools": "^3.1.1",
     "graphql-yoga": "^1.16.1",
     "ioredis": "^4.2.0",
+    "node-fetch": "^2.2.0",
     "pg": "^7.3.0",
     "reflect-metadata": "^0.1.10",
     "tslint": "^5.11.0",
@@ -35,10 +39,10 @@
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
     "test-server": "NODE_ENV=test ts-node src/index.ts",
     "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts",
-    "test": "NODE_ENV=test jest --forceExit",
-    "ci": "start-server-and-test test-server http://localhost:4000 test"
+    "test": "NODE_ENV=test jest --watch"
   },
   "jest": {
+    "globalSetup": "./src/testSetup/callSetup.js",
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
