--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "2.5.2"
   },
   "dependencies": {
+    "@gql2ts/from-schema": "^1.10.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "graphql": "^0.13.2",
@@ -38,7 +39,7 @@
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
     "test-server": "NODE_ENV=test ts-node src/index.ts",
-    "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts",
+    "gen-schema-types": "ts-node src/scripts/createTypes.ts",
     "test": "NODE_ENV=test jest --watch"
   },
   "jest": {
