--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^23.3.1",
     "@types/node": "^8.0.29",
     "@types/node-fetch": "^2.1.2",
+    "@types/sparkpost": "^2.1.4",
     "@types/uuid": "^3.4.3",
     "@types/yup": "^0.24.9",
     "gql2ts": "^1.8.2",
@@ -16,11 +17,13 @@
     "start-server-and-test": "^1.7.0",
     "ts-jest": "^23.1.3",
     "ts-node": "3.3.0",
+    "tslint-config-prettier": "^1.15.0",
     "typescript": "2.5.2"
   },
   "dependencies": {
     "@gql2ts/from-schema": "^1.10.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "graphql": "^0.13.2",
     "graphql-import": "^0.6.0",
@@ -31,6 +34,7 @@
     "node-fetch": "^2.2.0",
     "pg": "^7.3.0",
     "reflect-metadata": "^0.1.10",
+    "sparkpost": "^2.1.3",
     "tslint": "^5.11.0",
     "typeorm": "0.2.7",
     "uuid": "^3.3.2",
