--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.1",
+    "@types/connect-redis": "^0.0.7",
     "@types/express": "^4.16.0",
+    "@types/express-session": "^1.15.11",
     "@types/ioredis": "^4.0.3",
     "@types/jest": "^23.3.1",
     "@types/node": "^8.0.29",
@@ -23,8 +25,10 @@
   "dependencies": {
     "@gql2ts/from-schema": "^1.10.1",
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^3.4.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "graphql": "^0.13.2",
     "graphql-import": "^0.6.0",
     "graphql-request": "^1.8.2",
