added seq tests

--- a/package.json
+++ b/package.json
@@ -47,9 +47,8 @@
   },
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
-    "test-server": "NODE_ENV=test ts-node src/index.ts",
-    "gen-schema-types": "ts-node src/scripts/createTypes.ts",
-    "test": "NODE_ENV=test jest --watch"
+    "test": "NODE_ENV=test jest --watch --runInBand",
+    "gen-schema-types": "ts-node src/scripts/createTypes.ts"
   },
   "jest": {
     "globalSetup": "./src/testSetup/callSetup.js",
