--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^23.3.1",
     "@types/node": "^8.0.29",
     "@types/node-fetch": "^2.1.2",
+    "@types/request-promise": "^4.1.42",
     "@types/sparkpost": "^2.1.4",
     "@types/uuid": "^3.4.3",
     "@types/yup": "^0.24.9",
@@ -39,6 +40,7 @@
     "node-fetch": "^2.2.0",
     "pg": "^7.3.0",
     "reflect-metadata": "^0.1.10",
+    "request-promise": "^4.2.2",
     "sparkpost": "^2.1.3",
     "tslint": "^5.11.0",
     "typeorm": "0.2.7",
