--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.1",
     "@types/connect-redis": "^0.0.7",
+    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/express-rate-limit": "^2.9.3",
     "@types/express-session": "^1.15.11",
@@ -12,6 +13,7 @@
     "@types/jest": "^23.3.1",
     "@types/node": "^8.0.29",
     "@types/node-fetch": "^2.1.2",
+    "@types/passport": "^0.4.7",
     "@types/request-promise": "^4.1.42",
     "@types/sparkpost": "^2.1.4",
     "@types/uuid": "^3.4.3",
@@ -40,6 +42,8 @@
     "graphql-yoga": "^1.16.1",
     "ioredis": "^4.2.0",
     "node-fetch": "^2.2.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "pg": "^7.3.0",
     "rate-limit-redis": "^1.5.0",
     "reflect-metadata": "^0.1.10",
